--- a/templates/success.html
+++ b/templates/success.html
@@ -1,4 +1,6 @@
 <script type="text/html" id="success">
-  <h1>Success page</h1>
-  <div id="msg"><%= msg %></div>
+  <div class="success-container">
+    <h1>Success page</h1>
+    <div class="success-msg" id="msg"><%= msg %></div>
+  </div>
 </script>
